Bug #23109 --> attachment names aren't being converted to unicode before we try to display them in the attachment pop up menu.

Also removed a function I didn't need (DumpAttachmentsMenu)
r=alecf.